[gd_scene load_steps=4 format=3 uid="uid://c7376b0gthvhr"]

[ext_resource type="Script" path="res://InterfaceComponents/MainMenuUI/main_menu.gd" id="1_i27d2"]
[ext_resource type="PackedScene" uid="uid://ckkokmvpqe4o7" path="res://CustomizationArea/character_creation_zone.tscn" id="2_j3g2t"]
[ext_resource type="PackedScene" uid="uid://ct4wpugyn0inh" path="res://Player/player.tscn" id="3_6qrn5"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("play_button", "upgrades_button", "settings_button", "quit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i27d2")
play_button = NodePath("PlayButton")
upgrades_button = NodePath("UpgradesButton")
settings_button = NodePath("SettingsButton")
quit_button = NodePath("QuitButton")
customization_scene = ExtResource("2_j3g2t")
player_scene = ExtResource("3_6qrn5")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
offset_left = 416.0
offset_top = 144.0
offset_right = 665.0
offset_bottom = 289.0
theme_override_font_sizes/font_size = 100
text = "PLAY"

[node name="UpgradesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 329.0
offset_right = 831.0
offset_bottom = 474.0
theme_override_font_sizes/font_size = 100
text = "UPGRADES"

[node name="SettingsButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
offset_left = 330.0
offset_top = 497.0
offset_right = 800.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 100
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 660.0
offset_right = 676.0
offset_bottom = 805.0
theme_override_font_sizes/font_size = 100
text = "QUIT"

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
